--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FriendRequestActivity"></activity>
+        <activity android:name=".CommentsActivity"></activity>
+        <activity android:name=".UserProfile" />
+        <activity android:name=".FriendRequestActivity" />
         <activity android:name=".AnswerActivity" />
         <activity android:name=".UserPrefActivity" />
         <activity android:name=".NotificationActivity" />
