--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,26 +15,34 @@
         android:usesCleartextTraffic="true">
         <activity android:name=".TestActivity">
 
+
         </activity>
         <activity android:name=".AdsActivity">
 
         </activity>
         <activity android:name=".FriendRequestActivity" />
         <activity android:name=".AnswerActivity" />
-        <activity android:name=".UserPrefActivity" />
+        <activity android:name=".UserPrefActivity" >
+
+        </activity>
         <activity android:name=".NotificationActivity" />
         <activity
             android:name=".MyProfileActivity"
             android:parentActivityName=".MainActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginActivity">
+
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
+        <activity android:name=".MainActivity" >
+
+        </activity>
+
 
         <service
             android:name=".MyFirebaseMessagingService"
