--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.quoraandroid">
-
     <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -14,40 +12,26 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity android:name=".TestActivity">
-
-
         </activity>
         <activity android:name=".AdsActivity">
-
         </activity>
-        android:theme="@style/AppTheme">
-        <activity android:name=".CommentsActivity"></activity>
+        <activity android:name=".CommentsActivity"/>
         <activity android:name=".UserProfile" />
-
         <activity android:name=".FriendRequestActivity" />
         <activity android:name=".AnswerActivity" />
-        <activity android:name=".UserPrefActivity" >
-
-        </activity>
+        <activity android:name=".UserPrefActivity" />
         <activity android:name=".NotificationActivity" />
-        <activity
-            android:name=".MyProfileActivity"
+        <activity android:name=".MyProfileActivity"
             android:parentActivityName=".MainActivity" />
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".LoginActivity">
-
+        <activity android:name=".LoginActivity"/>
+        <activity android:name=".MainActivity" >
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" >
-
-        </activity>
-
-
         <service
             android:name=".MyFirebaseMessagingService"
             android:exported="false">
@@ -56,5 +40,8 @@
             </intent-filter>
         </service>
     </application>
-
 </manifest>
+
+
+
+
