--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.quoraandroid">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -11,24 +13,26 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".TestActivity">
-        </activity>
-        <activity android:name=".AdsActivity">
-        </activity>
-        <activity android:name=".CommentsActivity"/>
+        <activity android:name=".PerticularQuestionActivity"></activity>
+        <activity android:name=".AddQuestionActivity" />
+        <activity android:name=".TestActivity" />
+        <activity android:name=".AdsActivity" />
+        <activity android:name=".CommentsActivity" />
         <activity android:name=".UserProfile" />
         <activity android:name=".FriendRequestActivity" />
         <activity android:name=".AnswerActivity" />
         <activity android:name=".UserPrefActivity" />
         <activity android:name=".NotificationActivity" />
-        <activity android:name=".MyProfileActivity"
+        <activity android:name=".SearchActivity" />
+        <activity
+            android:name=".MyProfileActivity"
             android:parentActivityName=".MainActivity" />
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".LoginActivity"/>
-        <activity android:name=".MainActivity" >
-
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -41,8 +45,5 @@
             </intent-filter>
         </service>
     </application>
+
 </manifest>
-
-
-
-
